--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,6 +35,49 @@ input.orange-input:focus {
   padding-top: 3rem;
 }
 
-.profileInnerContainer h4{
+.formProfileContainer h4{
   text-align: center;
+}
+
+td, th {
+  text-align: center;
+}
+
+td a i {
+  cursor: pointer; 
+}
+
+.search-iput-field {
+  text-align: left;
+  /* margin-left: 1rem; */
+}
+
+/* .input-field {
+  margin-left: 1rem;
+} */
+
+.modalContainer {
+  z-index: 1003;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(0,0,0,.2);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.modalInnerContainer {
+  max-width: 600px;
+  background: #fff;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  /* text-align: left; */
+}
+
+.edit-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
